# itnews_sender_local

./: .env.example  .gitignore  AGENT_INSTRUCTION.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.itfind  MIGRATION_PLAN.md  README.md  VPC_ENDPOINT_SETUP.md  com.itnews.sender.cleanup.plist  com.itnews.sender.plist  lambda_handler.py  lambda_itfind_downloader.py  pyproject.toml  requirements-aws.txt  requirements.txt  run_daily.py
.claude/: settings.json
.moai/memory/: last-session-state.json
docs/: IAM_POLICY_REVIEW.md  ITFIND_WEEKLY_TRENDS_API.md  LAMBDA_TEST_EVENTS.md  PARAMETER_STORE_SETUP.md  PR_ITFIND_001.md
scripts/: add_lambda_iam_policy.sh  analyze_lambda_memory.sh  deploy_itfind.sh  gmail_cleanup.py  launchd_runner.sh  manage_recipients.py  reset_execution_log.py  send_itfind_manual.py  setup_aws_resources.sh  setup_execution_log_table.sh  setup_launchd.sh  setup_parameter_store.sh  ssm-policy.json  test_lambda.sh
src/: __init__.py  config.py  delivery_tracker.py  email_sender.py  execution_tracker.py  failure_tracker.py  itfind_scraper.py  parameter_store.py  pdf_image_extractor.py  pdf_processor.py  scraper.py  structured_logging.py  unsubscribe_token.py
src/api/: __init__.py  (+1 more)
tests/: test_attachment_filename.py  test_chapter_extraction.py  test_chapter_with_session.py  test_content_freshness.py  test_email_body.py  test_email_sender_bulk.py  test_gmail_cleanup.py  test_itfind_download_gate.py  test_latest_issue.py  test_pdf_image_extractor.py  test_with_existing_logic.py  validate_chapter_extraction.py  validate_chapter_standalone.py
(+45 files in other folders)
